fixed issue where header image was off center on android phones

--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,6 @@
     .headerBackground{
         background-image: url('./assets/image-header-mobile.jpg');
         background-size: 100%;
-        background-position: 0% -130%;
     }
 
     .backgroundSvg{
